<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/swarm1"
    tools:context=".Swarm1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <com.neuro_sama.swarm.IconFontView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/temperature"
            android:textSize="48sp"
            android:layout_margin="10dp"
            android:textColor="@color/purple_700"
            android:id="@+id/temperature"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/temperature_text"
            android:text="温度"
            android:gravity="center"
            android:textSize="30sp"
            android:textStyle="bold"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <com.neuro_sama.swarm.IconFontView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/humidity"
            android:textSize="48sp"
            android:layout_margin="10dp"
            android:textColor="@color/purple_700"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/humidity_text"
            android:text="湿度"
            android:gravity="center"
            android:textSize="30sp"
            android:textStyle="bold"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <com.neuro_sama.swarm.IconFontView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/light1"
            android:textSize="48sp"
            android:layout_margin="10dp"
            android:textColor="@color/purple_700"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/light_text"
            android:text="亮度"
            android:gravity="center"
            android:textSize="30sp"
            android:textStyle="bold"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <com.neuro_sama.swarm.IconFontView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/aqi"
            android:textSize="48sp"
            android:layout_margin="10dp"
            android:textColor="@color/purple_700"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/aqi_text"
            android:text="空气质量"
            android:gravity="center"
            android:textSize="30sp"
            android:textStyle="bold"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <com.neuro_sama.swarm.IconFontView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/water_meter"
            android:textSize="48sp"
            android:layout_margin="10dp"
            android:textColor="@color/purple_700"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/water_text"
            android:text="水表"
            android:gravity="center"
            android:textSize="30sp"
            android:textStyle="bold"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <com.neuro_sama.swarm.IconFontView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/electric_meter"
            android:textSize="48sp"
            android:layout_margin="10dp"
            android:textColor="@color/purple_700"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/electric_text"
            android:text="电量"
            android:gravity="center"
            android:textSize="30sp"
            android:textStyle="bold"
            />
    </LinearLayout>

</LinearLayout>